force-app/main/default/objects/Krow__Krow_Rate_Card_Role__c/Krow__Krow_Rate_Card_Role__c.object-meta.xml
<CustomObject>
    <label>Project Rate Card Role</label>
    <nameField>
        <displayFormat>RR-{0}</displayFormat>
        <label>Klient Rate Card Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Rate Card Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>