force-app/main/default/objects/Krow__Krow_Rate_Card_Role__c/fields/Krow__Krow_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Rate_Card__c</fullName>
    <label>Klient Rate Card</label>
    <referenceTo>Krow__Krow_Rate_Card__c</referenceTo>
    <relationshipLabel>Project Rate Card Roles</relationshipLabel>
    <relationshipName>Krow_Rate_Card_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>