force-app/main/default/objects/Krow__Krow_Rate_Card_Role__c/fields/Krow__Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Project Rate Card Roles</relationshipLabel>
    <relationshipName>Krow_Rate_Card_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>